--- a/Trainer/configs/base_config.yaml
+++ b/Trainer/configs/base_config.yaml
@@ -1,19 +1,17 @@
-output_dir: 'model_checkpoint/'
-device: '0'
 output_dir: "model_checkpoint/"
 device: 'cuda:0'
 dataset:
-  name: 'covid_dataset'
+  root_dir: 'covid_dataset'
   augmentation:
     rotation_range: 10
-  train_root: 'dataset/covid_dataset/train'
-  val_root: 'dataset/covid_dataset/val'
-  test_root: 'dataset/covid_dataset/test'
+  train_csv: 'train.csv'
+  val_csv: 'val.csv'
+  test_csv: 'test.csv'
   mean: [0.485, 0.456, 0.406]
   std: [0.229, 0.224, 0.225]
   
 model:
-  base: 'ensemble_convnext_vit'
+  base: 'convnext'
   pretrained: true
   input_size: [224, 224]
   num_classes: 4
@@ -21,7 +19,7 @@ model:
 train:
   batch_size: 64
   optimizer: 'adam'
-  lr: 0.001
+  lr: 0.00001
   num_epochs: 100
 
 val:
@@ -30,7 +28,12 @@ val:
 test:
   batch_size: 256
 
+custom_cb:
+  patience: 15
+  metric: 'f1_score'
+  mode: 'max'
+
 logger:
-  api_key: ""
-  workspace: ""
-  project_name: ""
+  api_key: "sISf602PGYRO5TJbcsUMCn5t2"
+  workspace: "clayrisee"
+  project_name: "covid_19_detection"
